# ci_demo

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
src/: CMakeLists.txt  double_int.cpp  double_int.hpp  main.cpp
test/: CMakeLists.txt  test.cpp
